# socialrobot

./: README.md
socialrobot_description/: CMakeLists.txt  README.md  package.xml  xacro2urdf.sh
socialrobot_description/launch/: display.launch
socialrobot_description/rviz/: urdf.rviz
socialrobot_description/urdf/: 6dof_RISE.urdf.xacro  7dof_RISE.urdf.xacro  base.urdf.xacro  bhand_model.urdf.xacro  common_properties.xacro  kinect_v2.urdf.xacro  socialrobot.urdf  socialrobot.urdf.xacro
socialrobot_description/vrep_script/: 6dof_RISE.lua  7dof_RISE.lua  kinect_v2.lua
socialrobot_motion_planner/: CMakeLists.txt  package.xml  sample_service.sh
socialrobot_motion_planner/launch/: planner.launch
socialrobot_motion_planner/src/: planner_node.cpp
socialrobot_motion_planner/srv/: ArmPlanning.srv
socialrobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
socialrobot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  socialrobot.srdf
socialrobot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
